// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`host-link output parity > skill link: claude rendered content is stable per skill 1`] = `
[
  "---
name: alpha-skill
version: 1.0.0
scope: shared
description: "First parity fixture skill"
---

# alpha-skill

Alpha body content with **markdown**.
",
  "---
name: beta-skill
version: 1.0.0
scope: shared
description: "Second parity fixture skill"
---

# beta-skill

Beta body content.
",
]
`;

exports[`host-link output parity > skill link: codex output is stable 1`] = `
{
  "skills/youmd/alpha-skill.md": "---
name: alpha-skill
version: 1.0.0
scope: shared
description: "First parity fixture skill"
---

# alpha-skill

Alpha body content with **markdown**.
",
  "skills/youmd/beta-skill.md": "---
name: beta-skill
version: 1.0.0
scope: shared
description: "Second parity fixture skill"
---

# beta-skill

Beta body content.
",
}
`;

exports[`host-link output parity > skill link: cursor output is stable 1`] = `
{
  "rules/youmd.md": "# You.md Identity Skills

> Auto-generated by youmd skill link. Do not edit manually.


---

## alpha-skill

---
name: alpha-skill
version: 1.0.0
scope: shared
description: "First parity fixture skill"
---

# alpha-skill

Alpha body content with **markdown**.


---

## beta-skill

---
name: beta-skill
version: 1.0.0
scope: shared
description: "Second parity fixture skill"
---

# beta-skill

Beta body content.
",
}
`;

exports[`host-link output parity > stack link: claude-code content is stable (path is the documented P11 fix) 1`] = `
"---
name: parity-stack
description: A fixed stack used for host-link snapshot parity.
---

# Parity Stack YouStack

This file is generated from \`youstack.json\`.

## Stack Identity

- Name: Parity Stack
- Slug: parity-stack
- Domain: parity-domain
- Tags: coding

## Startup

1. Run \`~/.youmd/bin/youmd-auto-upgrade --quiet || true\` when the helper exists.
2. Run \`youmd stack smoke\` from the stack or project root before relying on this stack.
3. Read local project instructions and project-context files before acting.
4. Use local/static stack files first.
5. Use shared You.md API/MCP only for protected brain retrieval, sync, tokens, connected tools, or server-side actions.
6. Protected reads may return readiness states such as auth_required, unavailable, or ready; if richer retrieval is unavailable, fall back to local stack files, project-context files, and public identity first.
7. Do not mutate brain data, connected tools, visibility, or repo files until the user approves the exact action.

## Capabilities

- manifest.inspect (local, read_only): inspect the local YouStack manifest
- manifest.smoke (local, read_only): run read-only local YouStack smoke validation
- stack.diagnose (local, read_only): run read-only stack health diagnostics for manifest bloat, capability routing, adapter drift, update hygiene, and public-readiness gaps
- stack.improve (local, write_local): inspect usage signals, evals, failures, corrections, and repo diffs to improve stack skills and workflows
- stack.update (local, write_local): check the stack update channel and refresh allowed local skills, workflows, docs, prompts, evals, and adapter files
- stack.maintain (local, write_local): organize, deduplicate, improve, and self-update named YouStacks and their skills using the bundled youstack-maintainer skill
- startup (local, read_only): Load project context and start the agent safely.
- protected-memory-search (protected, read_only): Search protected memories through You.md MCP.

## Brain Scopes

- memories.search (required): Protected recall.

## Self-Improvement

- Mode: propose
- Cadence: after failures
- Applies to: skills
- Signals: usage
- Evals: youmd stack smoke
- Approval required for: brain.write
- Update channel: manual
- Update check: youmd stack smoke
- Update source: local
- Auto-apply local updates: no
- When improving this stack, update stack files, docs, evals/tests, and adapter outputs together, then run \`youmd stack smoke\`.
- Use the bundled \`youstack-maintainer\` skill for stack organization, visibility review, public-readiness checks, and safe self-updates.
- Never auto-write protected brain data, private context, connected tools, or remote repos unless the manifest policy and user approval both allow it.

## Local Commands

\`\`\`bash
youmd stack inspect
youmd stack doctor
youmd stack smoke
youmd stack capabilities
youmd stack route "<request>"
\`\`\`
"
`;

exports[`host-link output parity > stack link: codex output is stable 1`] = `
[
  {
    "content": "---
name: parity-stack
description: A fixed stack used for host-link snapshot parity.
---

# Parity Stack YouStack

This file is generated from \`youstack.json\`.

## Stack Identity

- Name: Parity Stack
- Slug: parity-stack
- Domain: parity-domain
- Tags: coding

## Startup

1. Run \`~/.youmd/bin/youmd-auto-upgrade --quiet || true\` when the helper exists.
2. Run \`youmd stack smoke\` from the stack or project root before relying on this stack.
3. Read local project instructions and project-context files before acting.
4. Use local/static stack files first.
5. Use shared You.md API/MCP only for protected brain retrieval, sync, tokens, connected tools, or server-side actions.
6. Protected reads may return readiness states such as auth_required, unavailable, or ready; if richer retrieval is unavailable, fall back to local stack files, project-context files, and public identity first.
7. Do not mutate brain data, connected tools, visibility, or repo files until the user approves the exact action.

## Capabilities

- manifest.inspect (local, read_only): inspect the local YouStack manifest
- manifest.smoke (local, read_only): run read-only local YouStack smoke validation
- stack.diagnose (local, read_only): run read-only stack health diagnostics for manifest bloat, capability routing, adapter drift, update hygiene, and public-readiness gaps
- stack.improve (local, write_local): inspect usage signals, evals, failures, corrections, and repo diffs to improve stack skills and workflows
- stack.update (local, write_local): check the stack update channel and refresh allowed local skills, workflows, docs, prompts, evals, and adapter files
- stack.maintain (local, write_local): organize, deduplicate, improve, and self-update named YouStacks and their skills using the bundled youstack-maintainer skill
- startup (local, read_only): Load project context and start the agent safely.
- protected-memory-search (protected, read_only): Search protected memories through You.md MCP.

## Brain Scopes

- memories.search (required): Protected recall.

## Self-Improvement

- Mode: propose
- Cadence: after failures
- Applies to: skills
- Signals: usage
- Evals: youmd stack smoke
- Approval required for: brain.write
- Update channel: manual
- Update check: youmd stack smoke
- Update source: local
- Auto-apply local updates: no
- When improving this stack, update stack files, docs, evals/tests, and adapter outputs together, then run \`youmd stack smoke\`.
- Use the bundled \`youstack-maintainer\` skill for stack organization, visibility review, public-readiness checks, and safe self-updates.
- Never auto-write protected brain data, private context, connected tools, or remote repos unless the manifest policy and user approval both allow it.

## Local Commands

\`\`\`bash
youmd stack inspect
youmd stack doctor
youmd stack smoke
youmd stack capabilities
youmd stack route "<request>"
\`\`\`
",
    "relativePath": ".codex/skills/youstacks/parity-stack/SKILL.md",
  },
]
`;

exports[`host-link output parity > stack link: cursor output is stable 1`] = `
[
  {
    "content": "# Parity Stack YouStack

This file is generated from \`youstack.json\`.

## Stack Identity

- Name: Parity Stack
- Slug: parity-stack
- Domain: parity-domain
- Tags: coding

## Startup

1. Run \`~/.youmd/bin/youmd-auto-upgrade --quiet || true\` when the helper exists.
2. Run \`youmd stack smoke\` from the stack or project root before relying on this stack.
3. Read local project instructions and project-context files before acting.
4. Use local/static stack files first.
5. Use shared You.md API/MCP only for protected brain retrieval, sync, tokens, connected tools, or server-side actions.
6. Protected reads may return readiness states such as auth_required, unavailable, or ready; if richer retrieval is unavailable, fall back to local stack files, project-context files, and public identity first.
7. Do not mutate brain data, connected tools, visibility, or repo files until the user approves the exact action.

## Capabilities

- manifest.inspect (local, read_only): inspect the local YouStack manifest
- manifest.smoke (local, read_only): run read-only local YouStack smoke validation
- stack.diagnose (local, read_only): run read-only stack health diagnostics for manifest bloat, capability routing, adapter drift, update hygiene, and public-readiness gaps
- stack.improve (local, write_local): inspect usage signals, evals, failures, corrections, and repo diffs to improve stack skills and workflows
- stack.update (local, write_local): check the stack update channel and refresh allowed local skills, workflows, docs, prompts, evals, and adapter files
- stack.maintain (local, write_local): organize, deduplicate, improve, and self-update named YouStacks and their skills using the bundled youstack-maintainer skill
- startup (local, read_only): Load project context and start the agent safely.
- protected-memory-search (protected, read_only): Search protected memories through You.md MCP.

## Brain Scopes

- memories.search (required): Protected recall.

## Self-Improvement

- Mode: propose
- Cadence: after failures
- Applies to: skills
- Signals: usage
- Evals: youmd stack smoke
- Approval required for: brain.write
- Update channel: manual
- Update check: youmd stack smoke
- Update source: local
- Auto-apply local updates: no
- When improving this stack, update stack files, docs, evals/tests, and adapter outputs together, then run \`youmd stack smoke\`.
- Use the bundled \`youstack-maintainer\` skill for stack organization, visibility review, public-readiness checks, and safe self-updates.
- Never auto-write protected brain data, private context, connected tools, or remote repos unless the manifest policy and user approval both allow it.

## Local Commands

\`\`\`bash
youmd stack inspect
youmd stack doctor
youmd stack smoke
youmd stack capabilities
youmd stack route "<request>"
\`\`\`
",
    "relativePath": ".cursor/rules/youstacks-parity-stack.md",
  },
]
`;

exports[`host-link output parity > stack link: unknown host output is stable 1`] = `
[
  {
    "content": "# Parity Stack YouStack

This file is generated from \`youstack.json\`.

## Stack Identity

- Name: Parity Stack
- Slug: parity-stack
- Domain: parity-domain
- Tags: coding

## Startup

1. Run \`~/.youmd/bin/youmd-auto-upgrade --quiet || true\` when the helper exists.
2. Run \`youmd stack smoke\` from the stack or project root before relying on this stack.
3. Read local project instructions and project-context files before acting.
4. Use local/static stack files first.
5. Use shared You.md API/MCP only for protected brain retrieval, sync, tokens, connected tools, or server-side actions.
6. Protected reads may return readiness states such as auth_required, unavailable, or ready; if richer retrieval is unavailable, fall back to local stack files, project-context files, and public identity first.
7. Do not mutate brain data, connected tools, visibility, or repo files until the user approves the exact action.

## Capabilities

- manifest.inspect (local, read_only): inspect the local YouStack manifest
- manifest.smoke (local, read_only): run read-only local YouStack smoke validation
- stack.diagnose (local, read_only): run read-only stack health diagnostics for manifest bloat, capability routing, adapter drift, update hygiene, and public-readiness gaps
- stack.improve (local, write_local): inspect usage signals, evals, failures, corrections, and repo diffs to improve stack skills and workflows
- stack.update (local, write_local): check the stack update channel and refresh allowed local skills, workflows, docs, prompts, evals, and adapter files
- stack.maintain (local, write_local): organize, deduplicate, improve, and self-update named YouStacks and their skills using the bundled youstack-maintainer skill
- startup (local, read_only): Load project context and start the agent safely.
- protected-memory-search (protected, read_only): Search protected memories through You.md MCP.

## Brain Scopes

- memories.search (required): Protected recall.

## Self-Improvement

- Mode: propose
- Cadence: after failures
- Applies to: skills
- Signals: usage
- Evals: youmd stack smoke
- Approval required for: brain.write
- Update channel: manual
- Update check: youmd stack smoke
- Update source: local
- Auto-apply local updates: no
- When improving this stack, update stack files, docs, evals/tests, and adapter outputs together, then run \`youmd stack smoke\`.
- Use the bundled \`youstack-maintainer\` skill for stack organization, visibility review, public-readiness checks, and safe self-updates.
- Never auto-write protected brain data, private context, connected tools, or remote repos unless the manifest policy and user approval both allow it.

## Local Commands

\`\`\`bash
youmd stack inspect
youmd stack doctor
youmd stack smoke
youmd stack capabilities
youmd stack route "<request>"
\`\`\`
",
    "relativePath": ".you/adapters/windsurf/parity-stack.md",
  },
]
`;
